@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: command.c,v 1.181.2.1 2010/01/28 20:20:25 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: command.c,v 1.181.2.2 2010/01/31 20:29:03 mikulik Exp $"); }
 #endif
 
 /* GNUPLOT - command.c */
@@ -1168,12 +1168,18 @@ pause_command()
 # ifdef WXWIDGETS
 	if (!strcmp(term->name, "wxt")) {
 	    /* copy of the code below:  !(_Windows || OS2 || _Macintosh) */
-#  ifdef USE_MOUSE
-	    if (term && term->waitforinput)
+	    if (term && term->waitforinput && paused_for_mouse){
+		fprintf(stderr,"%s\n", buf);
 		term->waitforinput();
-	    else
+	    } else {
+#  if defined(WGP_CONSOLE)
+		fprintf(stderr,"%s\n", buf);
+		term->waitforinput();
+#  else /* !WGP_CONSOLE */
+		if (!Pause(buf)) 
+		bail_to_command_line();
 #  endif
-		fgets(buf, sizeof(buf), stdin); /* Hold until CR hit. */
+	    }
 	} else
 # endif /* _Windows && WXWIDGETS */
 	{
@@ -1185,13 +1191,18 @@ pause_command()
 	    } else { /* pausing via graphical windows */
 		int tmp = paused_for_mouse;
 		if (buf && paused_for_mouse) fprintf(stderr,"%s\n", buf);
-		if (!Pause(buf)) {
-		    if (!tmp) {
-			bail_to_command_line();
-		    } else {
-			if (!graphwin.hWndGraph) 
-			    bail_to_command_line();
-		    }
+		if (!tmp) {
+#  if defined(WGP_CONSOLE)
+		    fprintf(stderr,"%s\n", buf);
+		    term->waitforinput(); 
+#  else
+		    if (!Pause(buf)) 
+		       bail_to_command_line();
+#  endif
+		} else {
+		    if (!Pause(buf)) 
+		      if (!graphwin.hWndGraph) 
+		        bail_to_command_line();
 		}
 	    }
 	}
